--- a/pages/lineUpDetail/lineUpDetail.wxml
+++ b/pages/lineUpDetail/lineUpDetail.wxml
@@ -1,6 +1,6 @@
 <!-- lineUpDetail.wxml -->
 <view class='container'>
-  <view class='header'>
+  <view class='header' wx:if='{{!skipType}}'>
     <view class='text active'>人数</view>
     <view class='arrow'>
       <image src='../../img/book/arrow_active.png'></image>
@@ -34,23 +34,23 @@
     <view class='order_info'>
       <view class='flex'>
         <view class='o_label'>用餐总人数</view>
-        <view class='o_value'>{{num}}</view>
+        <view class='o_value'>{{line.num}}</view>
       </view>
       <view class='flex'>
         <view class='o_label'>偏好</view>
-        <view class='o_value'>{{favorName}}</view>
+        <view class='o_value'>{{line.smoke ? (line.smoke === 1 ? "吸烟区" : "非吸烟区") : "不介意"}}</view>
       </view>
       <view class='flex'>
         <view class='o_label'>包间</view>
-        <view class='o_value'>{{roomName}}</view>
+        <view class='o_value'>{{line.box ? "需要" : "不需要"}}</view>
       </view>
       <view class='flex'>
         <view class='o_label'>联系方式</view>
-        <view class='o_value'>{{email}}</view>
+        <view class='o_value'>{{line.email}}</view>
       </view>
     </view>
     <view class='order_btn' wx:if='{{(line.lineStatus !== 2 || line.lineStatus !== 3) && line.orderStatus === 0}}'>
-      <button>前往点菜</button>
+      <button bindtap='goToTheFoodOrder'>前往点菜</button>
     </view>
   </view>
 </view>
