--- a/pages/myOrder/myOrder.wxss
+++ b/pages/myOrder/myOrder.wxss
@@ -70,7 +70,7 @@
   text-align: center;
 }
 
-.order{
+.order, .queue{
   width: 100%;
   padding: 24rpx;
   border-radius: 16rpx;
@@ -80,13 +80,13 @@
   box-sizing: border-box;
 }
 
-.order .top{
+.order .top, .queue .top{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.order .top view:first-of-type{
+.order .top view:first-of-type, .queue .top view:first-of-type{
   max-width: 493rpx;
   font-size: 32rpx;
   line-height: 45rpx;
@@ -96,7 +96,7 @@
   text-overflow:ellipsis;
 }
 
-.order .top .status{
+.order .top .status, .queue .top .status{
   font-size: 28rpx;
   line-height: 40rpx;
   color: #3C3C3C;
@@ -106,11 +106,11 @@
   color: #F97572;
 }
 
-.order .top .status.blue{
+.order .top .status.blue, .queue .top .status.blue{
   color: #23C2F7;
 }
 
-.order .line{
+.order .line, .queue .line{
   width: 100%;
   height: 2rpx;
   background-color: #E0E0E0;
@@ -167,15 +167,51 @@
   color: #8C8C8C;
 }
 
-.order .bottom{
+.order .bottom, .queue .bottom{
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 40rpx;
 }
 
+.queue .bottom{
+  margin: 0;
+}
+
 .order .bottom .left{
   
+}
+
+.queue .bottom .left {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.queue .bottom .left view:first-of-type{
+  font-size: 56rpx;
+  line-height: 78rpx;
+  color: #3C3C3C;
+  margin-right: 18rpx;
+}
+
+.queue .bottom .left view:last-of-type{
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: #8C8C8C;
+  margin-top: 7rpx;
+}
+
+.queue .bottom .right button {
+  width: 155rpx;
+  height: 55rpx;
+  line-height: 55rpx;
+  font-size: 22rpx;
+  letter-spacing: 2rpx;
+  color: #666666;
+  border-radius: 31rpx;
+  border: 1rpx solid #B7B7B7;
+  background-color: #fff;
 }
 
 .order .bottom .right .detail{
