--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -30,7 +30,7 @@
     <swiper indicator-dots="{{indicatorDots}}" indicator-color='rgba(187,187,187,1)' indicator-active-color='#0000FF' autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular='true'>
       <block wx:for="{{bannerInfo}}" wx:key="{{index}}">
         <swiper-item>
-          <image src="{{item.imgUrl}}" class="slide-image swiper_img" />
+          <image src="{{item.imgUrl + '?x-oss-process=image/resize,w_700'}}" class="slide-image swiper_img" />
         </swiper-item>
       </block>
     </swiper>
@@ -109,17 +109,17 @@
         </view>
       </view>
       <view class='tabs_show_type'>
-        <image src='../../img/index/vertical.png' data-type='horizontal' bindtap='handleChangeTabsType' wx:if='{{tabs_type === "vertical"}}'></image>
-        <image src='../../img/index/horizontal.png' data-type='vertical' bindtap='handleChangeTabsType' wx:if='{{tabs_type === "horizontal"}}'></image>
+        <image src='../../img/index/vertical.png' data-type='vertical' bindtap='handleChangeTabsType' wx:if='{{tabs_type === "horizontal"}}'></image>
+        <image src='../../img/index/horizontal.png' data-type='horizontal' bindtap='handleChangeTabsType' wx:if='{{tabs_type === "vertical"}}'></image>
       </view>
     </view>
     <view class='tabs_content'>
       <view class='active'>
-        <view class='main'>
+        <view class='main' wx:if='{{goodsList.length}}'>
           <block wx:for='{{goodsList}}' wx:key='{{index}}'>
             <view class='{{tabs_type === "horizontal" ? "horizontal" : ""}}' data-gid='{{item.goodsInfo.gid}}' data-type='{{item.goodsInfo.type}}' bindtap='goToThePoiDetail'>
               <view class='img_row'>
-                <image class='bg' src='{{item.goodsBase.poster}}'></image>
+                <image class='bg' mode='aspectFill' src='{{item.goodsBase.poster + "?x-oss-process=image/resize,w_400"}}'></image>
                 <view class='icon'>
                   <view class='icon_left'>
                     <image class='top' wx:if='{{ item.goodsBase.top === 1 }}' src='../../img/index/top.png'></image>
@@ -181,6 +181,12 @@
             </view>
           </block>
         </view>
+        <view class='empty' wx:if='{{!goodsList.length && reqStatus !== "loading"}}'>
+            <view class='image_row'>
+              <image src='../../img/common/empty_data.png'></image>
+            </view>
+            <view class='text'>暂无数据哦，快去逛逛吧～</view>
+          </view>
         <view class='more' data-type='{{recommendType}}' bindtap='goToTheProductList' wx:if='{{goodsList.length}}'>查看更多</view>
       </view>
     </view>
@@ -199,7 +205,7 @@
           <view class='content'>
             <view class='top'>
               <view class='logo'>
-                <image src='{{item.imgUrl}}'></image>
+                <image mode='aspectFill' src='{{item.imgUrl + "?x-oss-process=image/resize,w_200"}}'></image>
               </view>
               <view class='worth'>
                 <view class='discount'>
