--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -599,3 +599,28 @@
   letter-spacing: 2px;
   color: #23c2f7;
 }
+
+.empty{
+  margin-top: 80rpx;
+  margin-bottom: 40rpx;
+}
+
+.empty .image_row{
+  width: 614rpx;
+  height: 380rpx;
+  margin: 0 auto 30rpx;
+}
+
+.empty .image_row image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.empty .text{
+  font-size: 32rpx;
+  line-height: 45rpx;
+  color: #8C8C8C;
+  letter-spacing: 3rpx;
+  text-align: center;
+}
