--- a/pages/productList/productList.wxss
+++ b/pages/productList/productList.wxss
@@ -435,3 +435,27 @@
   letter-spacing: 3rpx;
   text-align: center;
 }
+
+.empty{
+  margin-top: 80rpx;
+}
+
+.empty .image_row{
+  width: 614rpx;
+  height: 380rpx;
+  margin: 0 auto 30rpx;
+}
+
+.empty .image_row image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.empty .text{
+  font-size: 32rpx;
+  line-height: 45rpx;
+  color: #8C8C8C;
+  letter-spacing: 3rpx;
+  text-align: center;
+}
