--- a/pages/payresult/payresult.wxss
+++ b/pages/payresult/payresult.wxss
@@ -54,7 +54,7 @@
   background-color: #fff;
 }
 
-.like .title{
+.like>.title{
   font-size: 28rpx;
   line-height: 40rpx;
   color: #8C8C8C;
@@ -62,11 +62,11 @@
   margin-bottom: 40rpx;
 }
 
-.like .title text{
+.like>.title text{
   position: relative;
 }
 
-.like .title>text::before, .like .title>text::after{
+.like>.title>text::before, .like>.title>text::after{
   position: absolute;
   top: 50%;
   content: "";
@@ -76,12 +76,12 @@
   transform: translateY(-50%);
 }
 
-.like .title text::before{
+.like>.title text::before{
   left: 120%;
   background:linear-gradient(90deg,rgba(42,197,206,1) 0%,rgba(84,228,233,0) 100%);
 }
 
-.like .title text::after{
+.like>.title text::after{
   right: 120%;
   background:linear-gradient(90deg,rgba(84,228,233,0) 0%,rgba(42,197,206,1) 100%);
 }
