--- a/pages/shoppingCart/shoppingCart.wxss
+++ b/pages/shoppingCart/shoppingCart.wxss
@@ -30,19 +30,19 @@
   letter-spacing: 3rpx;
 }
 
-.like .title {
+.like>.title{
   font-size: 28rpx;
   line-height: 40rpx;
-  color: #8c8c8c;
+  color: #8C8C8C;
   text-align: center;
   margin-bottom: 40rpx;
 }
 
-.like .title text {
+.like>.title text{
   position: relative;
 }
 
-.like .title>text::before, .like .title>text::after {
+.like>.title>text::before, .like>.title>text::after{
   position: absolute;
   top: 50%;
   content: "";
@@ -52,14 +52,14 @@
   transform: translateY(-50%);
 }
 
-.like .title text::before {
+.like>.title text::before{
   left: 120%;
-  background: linear-gradient(90deg, rgba(42, 197, 206, 1) 0%, rgba(84, 228, 233, 0) 100%);
+  background:linear-gradient(90deg,rgba(42,197,206,1) 0%,rgba(84,228,233,0) 100%);
 }
 
-.like .title text::after {
+.like>.title text::after{
   right: 120%;
-  background: linear-gradient(90deg, rgba(84, 228, 233, 0) 0%, rgba(42, 197, 206, 1) 100%);
+  background:linear-gradient(90deg,rgba(84,228,233,0) 0%,rgba(42,197,206,1) 100%);
 }
 
 .like .recommend {
